# shooting-simulator

./: .gitignore  UPGRADE_SUMMARY.md  main.py  pipeline_cli.py  requirements.txt  setup_cpp_recorder.py  test_multi_target_fix.py
controllers/: __init__.py  analysis_controller.py  app_controller.py  calibration_controller.py  menu_controller.py  results_controller.py  simulation_controller.py  video_analysis_controller.py
cpp_video_recorder/: CMakeLists.txt  build.py  python_wrapper.py  video_recorder.cpp  video_recorder.h
data/: calibration_data.json  detection_data.json  homographies.json  results_data.json
models/: __init__.py  application.py  calibration.py  homography.py  results.py  shot_detection.py
utils/: __init__.py  enhanced_video_recorder.py  logger.py  spinner.py
views/: base.py  calibration.py  simulation.py  starting_menu.py
views/components/: circular_progress_indicator.py
